update logo, count:

--- a/index.html
+++ b/index.html
@@ -9,9 +9,27 @@
 
 </head>
 <body class="bg-gray-50 text-gray-900 font-sans">
-  <header class="text-center py-8">
-    <img src="assets/rickover.jpg" alt="Rickover" class="mx-auto w-32 rounded-full border border-gray-300" />
-    <h1 class="text-3xl font-bold mt-4">The Rickover Corpus</h1>
+<header class="py-8 bg-gray-50">
+  <div class="flex items-center justify-between max-w-5xl mx-auto px-4">
+    
+    <!-- Left: Rectangular Logo -->
+  <img src="assets/CIS_logo.png" alt="CIS Logo"
+       class="h-10 w-auto"
+       style="clip-path: inset(1px 1px 1px 1px);" />
+
+    <!-- Center: Title Block -->
+    <div class="text-center flex-1 mx-6">
+      <h1 class="text-3xl font-bold tracking-tight">The Rickover Corpus</h1>
+      <p class="text-sm text-gray-600 italic">
+        A digital archive of Admiral Hyman G. Rickover’s speeches and memos
+      </p>
+    </div>
+
+    <!-- Right: Rickover Headshot (no caption) -->
+    <img src="assets/rickover.jpg" alt="Rickover"
+         class="w-20 h-20 rounded-full border border-gray-300 object-cover shadow-sm" />
+
+  </div>
     <p class="max-w-2xl mx-auto mt-2 text-sm text-gray-600">
       Admiral Hyman Rickover, also known as the "Father of the Nuclear Navy", built the first nuclear-powered submarine and civilian nuclear reactor. 
         <br>
@@ -19,7 +37,7 @@
       As the U.S. returns once more to an era of shipbuilding and building nuclear energy infrastructure, understanding Rickover's management methods is of even greater importance. 
         <br>
         <br>
-      This website is a searchable digital archive of Admiral Hyman G. Rickover’s speeches and memos, including never before seen digitized artifacts from the <a href="https://www.usna.edu/Library/sca/man-findingaids/view.php?f=MS_561" target="_blank">U.S. Naval Academy Archives</a>
+      This website is a searchable digital archive of Admiral Hyman G. Rickover’s speeches, congressional testimonies, and memos. It includes over 2,500 pages of documents, including over 1,800 pages of never before seen digitized artifacts from the <a href="https://www.usna.edu/Library/sca/man-findingaids/view.php?f=MS_561" target="_blank">U.S. Naval Academy Archives</a>
     </p>
   </header>
 
