--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="flex items-center justify-between max-w-5xl mx-auto px-4">
     
     <!-- Left: Rectangular Logo -->
-    <a href="https://industrialstrategy.org" target="_blank" rel="noopener noreferrer">
+    <a href="https://www.industrialstrategy.org" target="_blank" rel="noopener noreferrer">
   <img src="assets/CIS_logo.png" alt="CIS Logo"
        class="h-10 w-auto"
        style="clip-path: inset(1px 1px 1px 1px);" />
