--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
   <main class="max-w-5xl mx-auto px-4">
     <input id="searchInput" type="text" placeholder="Search speeches, summaries..." class="w-full px-4 py-2 border border-gray-300 rounded mb-6" />
+    <div class="max-h-[600px] overflow-y-scroll border border-gray-300 rounded">
     <table class="w-full text-sm border-collapse" id="resultsTable">
     <thead class="bg-gray-100 sticky top-0 z-10">    
     <tr class="border-b border-gray-300 text-left">
@@ -57,6 +58,7 @@
     </thead>
       <tbody class="divide-y divide-gray-200"></tbody>
     </table>
+  </div>
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
