--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <th class="w-32">Links</th>
     </tr>
     </thead>
-      <tbody class="divide-y divide-gray-200"></tbody>
+      <tbody id="resultsBody" class="divide-y divide-gray-200"></tbody>
     </table>
   </div>
   </main>
