--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
   <main class="max-w-5xl mx-auto px-4">
     <input id="searchInput" type="text" placeholder="Search speeches, summaries..." class="w-full px-4 py-2 border border-gray-300 rounded mb-6" />
-    <div class="max-h-[600px] overflow-y-scroll border border-gray-300 rounded">
-    <table class="w-full text-sm border-collapse" id="resultsTable">
+  <div style="max-height: 600px; overflow-y: scroll;" class="max-h-[600px] overflow-y-scroll border border-gray-300 rounded">
+  <table class="w-full text-sm border-collapse" id="resultsTable">
     <thead class="bg-gray-100 sticky top-0 z-10">    
     <tr class="border-b border-gray-300 text-left">
         <th class="w-64">Title</th>
