--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
   </div>
   <p class="max-w-2xl mx-auto mt-2 text-sm text-gray-600">
-    Admiral Hyman Rickover, also known as the "Father of the Nuclear Navy", built the first nuclear-powered submarine and civilian nuclear reactor.
+    Admiral Hyman Rickover, also known as the "Father of the Nuclear Navy", built the <a href="https://charlesyang.substack.com/p/how-hyman-rickover-built-the-nuclear" target="_blank">first nuclear-powered submarine</a> and civilian nuclear reactor.
     <br>
     <br>
     As the U.S. returns once more to an era of shipbuilding and building nuclear energy infrastructure, understanding Rickover's management methods is of even greater importance.
