--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@ Special thanks to the U.S. Naval Academy Archives staff for their support of thi
     </p>
   </div>
 </footer>
-
+<div id="documentModal" class="modal-overlay">
+    <div class="modal-content">
+        <button class="modal-close-button" id="closeModalButton">&times;</button> <h3 id="modalTitle" class="text-lg font-semibold mb-2">Document View</h3>
+        <div class="modal-iframe-container" id="modalIframeContainer">
+            <p class="text-gray-500">Loading document...</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
