--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>The Rickover Corpus</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/png" href="assets/rickover_favicon.png" sizes="256x256">
+  <link rel="icon" type="image/png" href="/assets/rickover_favicon.png" sizes="256x256">
 </head>
 <body class="bg-gray-50 text-gray-900 font-sans">
 
