--- a/viewer.html
+++ b/viewer.html
@@ -9,6 +9,11 @@
     #loader {
       display: none;
     }
+    #pdf-viewer canvas {
+      width: 100% !important;
+      height: auto !important;
+      margin-bottom: 1rem;
+    }
   </style>
 </head>
 <body class="bg-gray-100 text-gray-900 font-sans">
@@ -17,37 +22,63 @@
     <a href="/" class="text-blue-600 underline text-sm">&larr; Back to Archive</a>
     <h1 class="text-2xl font-bold mb-4 mt-2">Document Viewer</h1>
     
-    <div id="loader" class="text-center text-gray-500 mb-4">Loading...</div>
+    <div id="loader" class="text-center text-gray-500 mb-4">Loading PDF...</div>
 
-    <div id="viewerContainer" class="rounded shadow bg-white">
-      <!-- iframe or pre will be injected here -->
+    <div id="viewerContainer" class="rounded shadow bg-white p-4 overflow-auto max-h-[85vh]">
+      <div id="pdf-viewer"></div>
     </div>
   </div>
 
+  <!-- PDF.js library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+
   <script>
+    pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+
     function getParam(param) {
       const urlParams = new URLSearchParams(window.location.search);
       return urlParams.get(param);
     }
 
     const docUrl = getParam('doc');
-    const container = document.getElementById('viewerContainer');
+    const container = document.getElementById('pdf-viewer');
     const loader = document.getElementById('loader');
 
     if (!docUrl) {
       container.innerHTML = '<p class="text-red-600">No document specified.</p>';
     } else {
-      loader.style.display = 'block';
       const isPDF = docUrl.endsWith('.pdf');
       const isTXT = docUrl.endsWith('.txt');
 
       if (isPDF) {
-        const iframe = document.createElement('iframe');
-        iframe.src = docUrl;
-        iframe.className = 'w-full h-[80vh] rounded';
-        iframe.onload = () => loader.style.display = 'none';
-        container.appendChild(iframe);
+        loader.style.display = 'block';
+
+        pdfjsLib.getDocument(docUrl).promise.then(pdf => {
+          loader.style.display = 'none';
+
+          for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
+            pdf.getPage(pageNum).then(page => {
+              const viewport = page.getViewport({ scale: 1.5 });
+              const canvas = document.createElement('canvas');
+              const context = canvas.getContext('2d');
+
+              canvas.height = viewport.height;
+              canvas.width = viewport.width;
+              canvas.className = 'mb-4 shadow-md';
+
+              container.appendChild(canvas);
+
+              page.render({ canvasContext: context, viewport: viewport });
+            });
+          }
+        }).catch(error => {
+          loader.style.display = 'none';
+          container.innerHTML = '<p class="text-red-600">Error loading PDF.</p>';
+          console.error(error);
+        });
+
       } else if (isTXT) {
+        loader.style.display = 'block';
         fetch(docUrl)
           .then(res => res.text())
           .then(text => {
