--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
   
   <div class="space-y-6">
       <!-- Excerpt Card -->
+    <blockquote class="border-l-4 border-blue-500 bg-white p-4 shadow-sm rounded">
+        <p class="text-lg italic text-gray-800">
+          It has been my experience that members of the legal profession are contributing substantially to the erosion of values and institutions on which our society is based. In their quest for money and power, many lawyers seem to have forgotten their obligations. By so doing, they alienate their countrymen, breed distrust of our institutions and those who run them, and undermine the traditional values of honor, humility, and honest dealing.
+        </p>
+      <footer class="mt-2 text-base text-gray-700">
+        <a href="https://rickovercorpus.org/?file=https%3A%2F%2Frickover-corpus.s3.us-east-1.amazonaws.com%2FLawyers%2Bversus%2BSociety.pdf" target="_blank">New York Patent Association, 1979</a>
+        </footer>
+      </blockquote>
       <blockquote class="border-l-4 border-blue-500 bg-white p-4 shadow-sm rounded">
         <p class="text-lg italic text-gray-800">
           “Any comparison of the Soviet and U.S. Navy must be viewed from the context that we are a maritime power dependent upon being able to maintain sea lanes of communication necessary to conduct military operations overseas and to support our allies. The mission of our navy is a far more difficult one than that of the Soviets of denying us free use of the seas.
