--- a/index.html
+++ b/index.html
@@ -70,12 +70,24 @@
       <!-- Excerpt Card -->
     <blockquote class="border-l-4 border-blue-500 bg-white p-4 shadow-sm rounded">
         <p class="text-lg italic text-gray-800">
+          "Today, the American people have little trust in those who work for the federal government. To an extent, this lack of confidence is justified, particularly when it involves senior managers.
+          Since the end of World War II, the number of high grade civilians in relation to the total government workforce has steadily increased to the point where we have more managers and checkers than doers. 
+          This increase has been brought about by the purveyors of the "techniques of modern management". Our senior employees have been schooled in this "new" philosophy which holds that as long as a person is well-versed in a few simple rules of how to handle people and situations, he need not know anything about the details of the program he is managing or the increasingly sophisticated technologies on which many of these programs are based. 
+        </p>
+      <footer class="mt-2 text-base text-gray-700">
+        <a href="https://rickovercorpus.org/?file=https%3A%2F%2Frickover-corpus.s3.us-east-1.amazonaws.com%2FLawyers%2Bversus%2BSociety.pdf" target="_blank">New York Patent Association, 1979</a>
+        </footer>
+      </blockquote>
+    
+    <blockquote class="border-l-4 border-blue-500 bg-white p-4 shadow-sm rounded">
+        <p class="text-lg italic text-gray-800">
           It has been my experience that members of the legal profession are contributing substantially to the erosion of values and institutions on which our society is based. In their quest for money and power, many lawyers seem to have forgotten their obligations. By so doing, they alienate their countrymen, breed distrust of our institutions and those who run them, and undermine the traditional values of honor, humility, and honest dealing.
         </p>
       <footer class="mt-2 text-base text-gray-700">
         <a href="https://rickovercorpus.org/?file=https%3A%2F%2Frickover-corpus.s3.us-east-1.amazonaws.com%2FLawyers%2Bversus%2BSociety.pdf" target="_blank">New York Patent Association, 1979</a>
         </footer>
       </blockquote>
+    
       <blockquote class="border-l-4 border-blue-500 bg-white p-4 shadow-sm rounded">
         <p class="text-lg italic text-gray-800">
           “Any comparison of the Soviet and U.S. Navy must be viewed from the context that we are a maritime power dependent upon being able to maintain sea lanes of communication necessary to conduct military operations overseas and to support our allies. The mission of our navy is a far more difficult one than that of the Soviets of denying us free use of the seas.
