--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           This increase has been brought about by the purveyors of the "techniques of modern management". Our senior employees have been schooled in this "new" philosophy which holds that as long as a person is well-versed in a few simple rules of how to handle people and situations, he need not know anything about the details of the program he is managing or the increasingly sophisticated technologies on which many of these programs are based. 
         </p>
       <footer class="mt-2 text-base text-gray-700">
-        <a href="https://rickovercorpus.org/?file=https%3A%2F%2Frickover-corpus.s3.us-east-1.amazonaws.com%2FLawyers%2Bversus%2BSociety.pdf" target="_blank">New York Patent Association, 1979</a>
+        <a href="https://rickovercorpus.org/?file=https%3A%2F%2Frickover-corpus.s3.us-east-1.amazonaws.com%2FRemarks%2Bof%2BAdm%2BH.G.%2BRickover%2BU.S.%2BNavy%2BAt%2Ba%2BMeeting%2Bof%2Bthe%2BORDER%2BOF%2B5-48.pdf" target="_blank">Order of the 5-48, 1979</a>
         </footer>
       </blockquote>
     
