--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <!-- Excerpt Card -->
     <blockquote class="border-l-4 border-blue-500 bg-white p-4 shadow-sm rounded">
         <p class="text-lg italic text-gray-800">
-          "Today, the American people have little trust in those who work for the federal government. To an extent, this lack of confidence is justified, particularly when it involves senior managers.
+          Today, the American people have little trust in those who work for the federal government. To an extent, this lack of confidence is justified, particularly when it involves senior managers.
           Since the end of World War II, the number of high grade civilians in relation to the total government workforce has steadily increased to the point where we have more managers and checkers than doers. 
           This increase has been brought about by the purveyors of the "techniques of modern management". Our senior employees have been schooled in this "new" philosophy which holds that as long as a person is well-versed in a few simple rules of how to handle people and situations, he need not know anything about the details of the program he is managing or the increasingly sophisticated technologies on which many of these programs are based. 
         </p>
